# streamfetch

./: .gitignore  README.md  config.example.yml  pyproject.toml
src/streamfetch/: __init__.py  main.py
src/streamfetch/cli/: commands.py  interactive.py
src/streamfetch/config/: api_targets.py  settings.py
src/streamfetch/dash/: parser.py
src/streamfetch/media/: ffmpeg.py
src/streamfetch/tidal/: api.py  downloader.py
src/streamfetch/utils/: filename.py  http.py  logging_config.py  lrclib.py  xml.py
